# audio_file

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: start_project.sh
src/: conf.py  database.py  main.py  sup.py
src/api/endpoints/: admin.py  audio.py  auth.py  auth_yandex.py  user.py
src/crud/: audio.py  user.py
src/migrations/: env.py
src/migrations/versions/: 5e84a07c1407_initial_migration.py  c7ce26da6efc_init.py
src/models/: __init__.py  audio_file.py  user.py
src/schemas/: audio.py  token.py  user.py  yandex.py
src/services/: audio.py  auth.py  security.py  token.py  user_service.py  yndex.py
